[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]
[ext_resource path="res://ball_icon.jpg" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 229, 172 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 137.5, 144 )
scale = Vector2( 0.152778, 0.15 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 139.0
margin_top = 19.0
margin_right = 357.0
margin_bottom = 59.0

[node name="Button" type="Button" parent="."]
margin_left = 601.0
margin_top = 34.0
margin_right = 763.0
margin_bottom = 88.0
text = "start"

[node name="Button2" type="Button" parent="."]
margin_left = 812.0
margin_top = 34.0
margin_right = 974.0
margin_bottom = 88.0
text = "stop"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
